# rustv

./: .gitignore  Cargo.toml  PRESENTATION  README.md  TODO  TODO.txt  auto.sh  init.gdb  main  main2  test.txt
alt/asm/: makefile
alt/asm/src/: addi.s  beq.s  data.s  exit.s  func0.s  jal.s  li.s  lui.s  mult-sects.s  ret.s  test0.s  test1.s  x0.s  x1.s  x2.s  x3.s  x4.s  x5.s  x6.s  x7.s  x8.s  x9.s
alt/c/: main.s  makefile
alt/c/src/: main.c
alt/rust/: main1.rs  naive-gdb-server.rs  opcode-cacher.rs  reader.rs  streamlookhead.rs
doc/: Diagrama Simulador Riscv32.drawio  THOUGHTS.txt  TODO.txt  gdbstub.md  linux-abi-riscv32.md  scheme.drawio
doc/img/: figuras-tcc.excalidraw
doc/notes/: dwarf-gimli.md  gdbstub.md
examples/: blt.s  exit.s  funccall.s  hello-burrito.s  hello-world.s  recursion.s  selection-sort.s  stack.s  var.s  vector-multiplier.s  wrong-addi.s
notes/: THOUGHTS.txt  TODO.txt
src/: assembler.rs  cpu.rs  debugger.rs  elf.rs  elfreader.rs  elfwriter.rs  executor.rs  isa.rs  lexer.rs  lib.rs  machine.rs  main.rs  memory.rs  misc.rs  parser.rs  reader.rs  spec.rs  streamreader.rs  syntax.rs  tokenizer.rs  utils.rs
src/asm/: a.out  addi.s  addi.txt  info.txt  makefile  sw.s  x.s  x.txt  x1.txt  x2.txt
src/c/: main.c  main.s  makefile
src/emu/: cpu.rs  debugger.rs  machine.rs  memory.rs
src/lang/: directive.rs  ext.rs  highassembly.rs  lowassembly.rs  pseudo.rs
tmp/: DUMP.txt  THOUGHTS.txt  TODO.txt  executor.rs  memory.rs
